<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    android:paddingStart="@dimen/margin_main_h"
    android:paddingEnd="@dimen/margin_main_h"
    tools:ignore="MissingPrefix">

    <View
        android:id="@+id/view_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone"/>

    <com.noober.background.view.BLConstraintLayout
        android:id="@+id/bar_search"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:clickable="true"
        android:focusable="true"
        app:bl_solid_color="@color/color_bg_gray"
        app:bl_corners_radius="@dimen/radius_medium"
        android:paddingStart="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_small"
        android:paddingTop="@dimen/padding_little"
        android:paddingBottom="@dimen/padding_little"
        app:layout_constraintTop_toBottomOf="@id/view_search">

        <ImageView
            android:id="@+id/ic_search"
            android:layout_width="@dimen/ic_size_medium"
            android:layout_height="@dimen/ic_size_medium"
            android:background="@mipmap/ic_search_lite"
            android:backgroundTint="@color/color_lite_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:clickable="true"
            android:focusable="true"/>

        <EditText
            android:id="@+id/editText_keyword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_little"
            android:background="@null"
            android:ems="15"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/color_main_black"
            android:textColorHint="@color/color_lite_gray"
            android:textSize="@dimen/text_body"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ic_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.noober.background.view.BLConstraintLayout>

    <com.noober.background.view.BLConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/bar_search"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/margin_main_v"
        android:layout_marginBottom="@dimen/margin_main_v"
        app:bl_solid_color="@color/color_white"
        app:bl_corners_radius="@dimen/radius_small"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small">


        <TextView
            android:id="@+id/textView_title_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_title"
            android:textSize="@dimen/text_body"
            android:shadowColor="#000000"
            android:shadowDx="0.3"
            android:shadowDy="0.3"
            android:shadowRadius="0.3"
            android:textColor="@color/color_main_black"
            android:textStyle="bold"
            android:elevation="10dp"
            android:visibility="invisible"
            tools:visibility="visible"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_search_result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_main_v"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_title_result" />

        <TextView
            android:id="@+id/textView_no_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.3"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="0.3"
            android:shadowDy="0.3"
            android:shadowRadius="0.3"
            android:text="@string/search_no_result"
            android:textColor="@color/color_light_gray"
            android:textSize="@dimen/text_body_lite"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_title_result"
            tools:visibility="visible" />
    </com.noober.background.view.BLConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>